--- a/src/components/Rubric.css
+++ b/src/components/Rubric.css
@@ -14,6 +14,13 @@
     text-align: left;
   }
 
+  h4 {
+    text-align: center;
+    font-style: bold;
+    margin-top: 0.5cm;
+    color: red;
+  }
+
   h3 {
     margin-bottom: auto;
   }
@@ -29,6 +36,7 @@
     white-space: pre-wrap;
     background: #fff;
   }
+
   
   
   .rubric__wrapper {
@@ -53,6 +61,12 @@
 
   .credit {
     background-color: rgba(183, 183, 236, 0.37);
+  }
+
+  .highconfidence {
+    font-weight: 300;
+    font-style: italic;
+
   }
 
   .nocredit {
